# pipepp-core

./: .gitignore  CMakeLists.txt  Dockerfile.alpine  Dockerfile.fedora  README.md
.github/workflows/: ci.yml
include/pipepp/: pipepp.hpp
include/pipepp/core/: adapt.hpp  any_source.hpp  as_range.hpp  concepts.hpp  config.hpp  connect_to.hpp  error_code.hpp  expected.hpp  fixed_string.hpp  message.hpp  message_callback.hpp  pipeline.hpp  pipeline_factory.hpp  pipeline_ops.hpp  small_function.hpp  source_registry.hpp  spinlock.hpp  stages.hpp  uri.hpp
test/: CMakeLists.txt
test/docker/: Dockerfile  Dockerfile.coverage
test/helpers/: test_sources.hpp
test/integration/: test_connect_to.cpp  test_pipe_syntax.cpp  test_pipeline_flow.cpp
test/system/: test_embedded_config.cpp  test_full_pipeline.cpp
test/unit/: test_any_source.cpp  test_capacity.cpp  test_concepts.cpp  test_config.cpp  test_error_code.cpp  test_expected.cpp  test_fault_injection.cpp  test_fixed_string.cpp  test_function_coverage.cpp  test_message.cpp  test_phase4.cpp  test_pipeline.cpp  test_pipeline_coverage.cpp  test_pipeline_factory.cpp  test_pipeline_ops.cpp  test_run_emit.cpp  test_small_function.cpp  test_source_registry.cpp  test_spinlock.cpp  test_stages.cpp  test_thread_safety.cpp  test_uri.cpp
